docs(api): update openapi.yml
